@@ -2,10 +2,11 @@
 
 <beans>
     <bean id="manager" class="edu.mcw.rgd.gff3.Manager">
-        <property name="version" value="--Gff3 generation pipeline -- build Mar 04, 2024 --" />
+        <property name="version" value="--Gff3 generation pipeline -- build Mar 08, 2024 --" />
 
         <property name="assemblies"><!-- file system location for files for given assembly: must be the same as found in '/ref/fasta' directory -->
             <map>
+                <entry key="380" value="data/jbrowse2/Rat" />
                 <entry key="372" value="data/jbrowse2/Rat" />
                 <entry key="360" value="data/jbrowse2/Rat" />
                 <entry key= "70" value="data/jbrowse2/Rat" />
@@ -50,6 +51,7 @@
 
         <property name="processedMapKeys">
             <list>
+                <value>380</value>  <!-- rn8 -->
                 <value>372</value>  <!-- rn7 -->
                 <value>360</value>  <!-- rn6 -->
                 <value>70</value>  <!-- rn5 -->
@@ -155,6 +157,7 @@
         <property name="outDir" value="Gene Models/NCBI Gene Features"/>
         <property name="processedMapKeys">
             <list>
+                <value>380</value>  <!-- rn8 -->
                 <value>372</value>  <!-- rn7 -->
                 <value>360</value>  <!-- rn6 -->
                 <value>70</value>  <!-- rn5 -->
@@ -247,6 +250,7 @@
         <property name="trackName" value="Protein Domains"/>
         <property name="processedMapKeys">
             <list>
+                <value>380</value>  <!-- rn8 -->
                 <value>372</value>  <!-- rn7 -->
                 <value>360</value>  <!-- rn6 -->
                 <value>70</value>  <!-- rn5 -->
