@@ -1,3 +1,6 @@
+Mar 08 2024
+  jbrowse2: added rn8
+
 Mar 04 2024
   carpe-variants: fixes of positions for deletions; processing in 10 simultaneous threads
 
